--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Moscow.Neighbours Backend</description>
 	<properties>
 		<java.version>11</java.version>
+        <start-class>com.moscow.neighbours.backend.MoscowNeighboursApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -44,15 +45,19 @@
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
     </dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
